<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_q1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gustavosg.tbcdrones.q4">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:text="@string/pergunta4"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/rgq4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/cbq11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r4q1"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/cbq12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/r4q2"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/cbq13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/r4q3"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/cbq14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/r4q4"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/cbq15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/r4q5"
                    android:textSize="17sp" />
            </RadioGroup>

            <Button
                android:id="@+id/proximaq4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rgq4"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/próxima"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
