<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pagina1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gustavosg.tbcdrones.Pagina3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonProximaPagina3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/próxima"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/buttonAnterior3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorPrimary"
                    android:text="@string/anterior"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/pagina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="29dp"
                    android:layout_marginRight="29dp"
                    android:layout_toLeftOf="@+id/buttonProximaPagina3"
                    android:layout_toStartOf="@+id/buttonProximaPagina3"
                    android:text="@string/pagina3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tituloTeoria"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/tituloetica"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/etica"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
